[package]
name = "sim"
version.workspace = true
edition.workspace = true

# cdylib: artifact linkable from JS (.wasm output via wasm-bindgen).
# rlib: allows compiling/testing the logic natively too (cargo test).
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
